# ocr-service

./: .gitignore  README.md  ocr-service.sh  setup.sh
app/: main.py  models.py  store.py  worker.py
glm-ocr/: .pre-commit-config.yaml  README.md  README_zh.md  agent.md  pyproject.toml
glm-ocr/.github/workflows/: _release.yml  _test_release.yml  ci.yml
glm-ocr/apps/backend/: pyproject.toml
glm-ocr/examples/multi-gpu-deploy/: README.md  README_zh.md  coordinator.py  engine.py  gpu_utils.py  launch.py  worker.py
glm-ocr/examples/ollama-deploy/: README.md
glm-ocr/examples/self-host/: README.md
glm-ocr/glmocr/: __init__.py  api.py  cli.py  config.py  config.yaml  maas_client.py  ocr_client.py  server.py
glm-ocr/glmocr/dataloader/: page_loader.py
glm-ocr/glmocr/layout/: __init__.py  layout_detector.py
glm-ocr/glmocr/parser_result/: base.py  pipeline_result.py
glm-ocr/glmocr/pipeline/: _common.py  _state.py  _unit_tracker.py  _workers.py  pipeline.py
glm-ocr/glmocr/postprocess/: result_formatter.py
glm-ocr/glmocr/tests/: conftest.py  test_integration.py  test_unit.py
glm-ocr/glmocr/utils/: image_utils.py  markdown_utils.py  result_postprocess_utils.py  visualization_utils.py
